--- a/inicio.html
+++ b/inicio.html
@@ -1,1 +1,10 @@
-<html></html>
+<html>
+	<head>
+		<title>
+			Alquila tu trastero
+		</title>
+    </head>
+	<body>
+        Identifícate aquí:
+    </body>
+<html>
