añadido el formulario

--- a/inicio.html
+++ b/inicio.html
@@ -5,6 +5,18 @@
 		</title>
     </head>
 	<body>
-        Identifícate aquí:
+        <h1>
+            Identifícate aquí:
+        </h1>
+        <form>
+            Nombre de usuario:
+            <input type="text" name="nombre" value="Introduzca su nombre">
+            <br>Contraseña:
+            <input type="password" name="contraseña" value=>
+            <br><br>
+            <input type="submit" value="Enviar">
+	        <input type="reset" value="Borrar">
+        </form>
+
     </body>
-<html>
+    <html>
