pagina de inicio de la web

--- a/inicio.html
+++ b/inicio.html
@@ -1,22 +1,26 @@
 <html>
-	<head>
-		<title>
-			Alquila tu trastero ahora
-		</title>
+    <head>
+        <title>
+            ¡ Bienvenido a Trasteros /nombre/!
+        </title>
     </head>
-	<body>
+    <body>
         <h1>
-            Identifícate aquí:
+           ¡ Bienvenido a Trasteros "nombre de empresa " !
         </h1>
+        <h2>
+            Elige la operación que quieras realizar:
+        </h2>
         <form>
-            Nombre de usuario:
-            <input type="text" name="nombre" value="Introduzca su nombre">
-            <br>Contraseña:
-            <input type="password" name="contraseña" value=>
-            <br><br>
-            <input type="submit" value="Enviar">
-	        <input type="reset" value="Borrar">
+            <input type="button" value=" Haz click aqui para registrarte">
         </form>
-
+        <br>
+        <form>
+            <input type="button" value=" Haz click aqui para modificar tus datos">
+        </form>
+        <br>
+        <form>
+            <input type="button" value=" Haz click aqui para ver el listado de trasteros y modificarlo">
+        </form>
     </body>
-    <html>
+</html>
