--- a/Modificaciones.html
+++ b/Modificaciones.html
@@ -6,7 +6,7 @@
     </head>
 	<body>
         <h1>
-            Identifícate aquí:
+            Modifica tus datos aquí:
         </h1>
         <form>
             Nombre de usuario:
