--- a/Modificaciones.html
+++ b/Modificaciones.html
@@ -6,20 +6,21 @@
     </head>
 	<body>
         <h1>
-            Modifica tus datos aquí:
+            <p style="color: red;">Modifica tus datos aquí:</p>
+            
         </h1>
         <form>
-            Nombre de usuario:
+            <p style="color:yellow;background-color: black;">Nombre de usuario:</p> 
             <input type="text" name="nombre" value="Introduzca su nunevo nombre">
-            <br>Contraseña:
+            <br><p style="color:yellow;background-color: black;">Contraseña:</p>
             <input type="password" name="contraseña" value=>
-            <br> DNI:
+            <br> <p style="color:yellow;background-color: black;">DNI:</p>
             <input type="text" name="DNI" value="introduzca el nuevo DNI">
-            <br> Telefono:
+            <br> <p style="color:yellow;background-color: black;">Telefono</p>
             <input type="text" name="numero de telefono" value="introduzca el nuevo numero de telefono">
-            <br> Fecha de Nacimiento:
+            <br> <p style="color:yellow;background-color: black;">Fecha de Nacimiento</p>
             <input type="date" name="fecha de nacimiento" value="introduzca su nueva fecha de nacimiento">
-            <br>Email
+            <br><p style="color:yellow;background-color: black;">Email:</p>
             <input type="text" name="Email" value="Introduce su nuevo email"> 
             <br><br>
             <input type="submit" value="Enviar">
