--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,9 @@
         <title>
             Trasteros /nombre/
         </title>
-        <link rel="stylesheet" href="inicio.css"/>
+        <link rel="stylesheet" type="text/css" href="inicio.css"/>
+        <link rel = " shortcut icon " href = " ./favicon2.png " type = " image / x - icon " >
+
     </head>
 
     <body>
