cambio de colores y de icono

--- a/inicio.html
+++ b/inicio.html
@@ -5,7 +5,7 @@
             Trasteros /nombre/
         </title>
         <link rel="stylesheet" type="text/css" href="inicio.css"/>
-        <link rel = " shortcut icon " href = " ./favicon2.png " type = " image / x - icon " >
+        <link rel = " shortcut icon " href = " ./favicon.png " type = " image / x - icon " >
 
     </head>
 
