no tener en cuenta este archivo

--- a/inicio.html
+++ b/inicio.html
@@ -1,1 +1,30 @@
-<html></html>
+<html>
+	<head>
+		<title>
+			Alquila tu trastero ahora
+		</title>
+    </head>
+	<body>
+        <h1>
+            <p style="color: red;">Modifica tus datos aquí:</p>
+            
+        </h1>
+        <form>Nombre:
+             <input type="text" name="nombre" value="Introduzca su nunevo nombre">
+            <br>Clave:
+            <input type="password" name="clave" value=>
+            <br> DNI:
+            <input type="text" name="DNI" value="introduzca el nuevo DNI">
+            <br> Telefono:
+            <input type="text" name="numero de telefono" value="introduzca el nuevo numero de telefono">
+            <br> Fecha de nacimiento:
+             <input type="date" name="fecha de nacimiento" value="introduzca su nueva fecha de nacimiento">
+            <br>Email:
+            <input type="text" name="Email" value="Introduce su nuevo email"> 
+            <br><br>
+            <input type="submit" value="Enviar">
+	        <input type="reset" value="Borrar">
+        </form>
+
+    </body>
+    <html>
