--- a/Modificaciones.html
+++ b/Modificaciones.html
@@ -10,17 +10,17 @@
             
         </h1>
         <form>
-            <p style="color:yellow;background-color: black;">Nombre de usuario:</p> 
+            Nombre de usuario:
             <input type="text" name="nombre" value="Introduzca su nunevo nombre">
-            <br><p style="color:yellow;background-color: black;">Contraseña:</p>
-            <input type="password" name="contraseña" value=>
-            <br> <p style="color:yellow;background-color: black;">DNI:</p>
+            <br>Contraseña:
+            <input type="password" name="contraseña" value="" >
+            <br> DNI:
             <input type="text" name="DNI" value="introduzca el nuevo DNI">
-            <br> <p style="color:yellow;background-color: black;">Telefono</p>
+            <br> Telefono:
             <input type="text" name="numero de telefono" value="introduzca el nuevo numero de telefono">
-            <br> <p style="color:yellow;background-color: black;">Fecha de Nacimiento</p>
+            <br> Fecha de Nacimiento:
             <input type="date" name="fecha de nacimiento" value="introduzca su nueva fecha de nacimiento">
-            <br><p style="color:yellow;background-color: black;">Email:</p>
+            <br>Email:
             <input type="text" name="Email" value="Introduce su nuevo email"> 
             <br><br>
             <input type="submit" value="Enviar">
