--- a/registro.html
+++ b/registro.html
@@ -16,39 +16,40 @@
                 <div class="form">
                     <h1>Registro</h1>
                 <div class="grupo">
-                    <input type="text" name="" id="nombre" required><span class="barra"></span>
+                    <input type="text" name="" id="nombre" ><span class="barra"></span>
                     <label for="">Nombre</label>
                 </div>
                 <div class="grupo">
-                    <input type="text" name="" id="apellidos"  required><span class="barra"></span>
+                    <input type="text" name="" id="apellidos"  ><span class="barra"></span>
                     <label for="">Apellidos</label>
                 </div>
                 <div class="grupo">
-                    <input type="text" name="" id="dni"  required><span class="barra"></span>
+                    <input type="text" name="" id="dni"  ><span class="barra"></span>
                     <label for="">DNI</label>
                 </div>
                 <div class="grupo">
-                    <input type="text" name="" id="telefono"  required><span class="barra"></span>
+                    <input type="text" name="" id="telefono"  ><span class="barra"></span>
                     <label for="">Telefono</label>
                 </div>
                 <div class="grupo">
-                    <input type="date" name="" id="fecha_nac" required><span class="barra"></span>
+                    <input type="date" name="" id="fecha_nac" ><span class="barra"></span>
                     <label for="">Fecha Nacimiento</label>
                 </div>
                 <div class="grupo">
-                    <input type="email" name="" id="email" required><span class="barra"></span>
+                    <input type="email" name="" id="email" ><span class="barra"></span>
                     <label for="">E-mail</label>
                 </div>
                 <div class="grupo">
-                    <input type="password" name="" id="password1"  required><span class="barra"></span>
+                    <input type="password" name="" id="password1"  ><span class="barra"></span>
                     <label for="">Contraseña</label>
                 </div>
                 <div class="grupo">
-                    <input type="password" name="" id="password12" required><span class="barra"></span>
+                    <input type="password" name="" id="password12" ><span class="barra"></span>
                     <label for="">Repita la contraseña</label>
                 </div>
                 
                 <button type="submit">Regístrate</button>
+                <p class="warnings" id="warnings"></p>
                 </div>
             </form>
     </body>
