pequeños cambios en diseño y añadida la pagina para cuando el usuario inicia sesion

--- a/inicio.html
+++ b/inicio.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8" />
         <title>
-            Trasteros - Y MAS
+            Trasteros Y MAS
         </title>
         <link rel="stylesheet" type="text/css" href="inicio.css"/>
         <link rel = " shortcut icon " href = " ./favicon.png " type = " image / x - icon " >
@@ -45,7 +45,7 @@
             
             <!--<a href="identificacion.html" class="boton">Haz click aquí para identificarte</a>*/ -->
             <br><br>
-            <a href="inicio.html" class="boton">Ver trasteros</a>
+            <a href="listado.html" class="boton">Ver lista de trasteros</a>
             
             <!--
             <form action="registro.html">
