Cambios placeholder y DNI con -

--- a/registro.html
+++ b/registro.html
@@ -24,19 +24,19 @@
                         <label for="">Apellidos</label>
                     </div>
                     <div class="grupo">
-                        <input type="text" name="" id="dni"  ><span class="barra"></span>
+                        <input type="text" placeholder="11111111-A" name="" id="dni"  ><span class="barra"></span>
                         <label for="">DNI</label>
                     </div>
                     <div class="grupo">
                         <input type="text" name="" id="telefono"  ><span class="barra"></span>
                         <label for="">Telefono</label>
                     </div>
-                    <div class="grupo">
-                        <input type="date" name=""  id="fecha_nac"  value="2022-05-06"><span class="barra"></span>
+                    <div class="grupo"> 
+                        <input type="date" name=""  id="fecha_nac"  value="2022-05-06" max="2022-10-02" min="2002-02-04"><span class="barra"></span>
                         <label for="">Fecha Nacimiento</label>
                     </div>
                     <div class="grupo">
-                        <input type="email" name="" id="email" ><span class="barra"></span>
+                        <input type="email" placeholder="nombre@servidor.extension" name="" id="email" ><span class="barra"></span>
                         <label for="">E-mail</label>
                     </div>
                     <div class="grupo">
