archivo js conectado

--- a/registro.html
+++ b/registro.html
@@ -8,7 +8,7 @@
         <title>
             Registrate en nuestra página web
         </title>
-        <script type="text/javascript" src="fichero.js"></script>
+        <script type="text/javascript" src="registro.js"></script>
         <link rel="stylesheet" href="estilosRegistro.css">
     </head>
 
