--- a/app/registro.html
+++ b/app/registro.html
@@ -5,7 +5,7 @@
         <title>
             Registrate en nuestra página web
         </title>
-        <script type="text/javascript" src="fichero.js"></script>
+        <script type="text/javascript" src="registro.js"></script>
         <link rel="stylesheet" href="estilosRegistro.css" />
     </head>
 
@@ -24,7 +24,7 @@
                     <label for="">Apellidos</label>
                 </div>
                 <div class="grupo">
-                    <input type="text" name="" id="dni"  ><span class="barra"></span>
+                    <input type="text" name="" placeholder="11111111-A" id="dni"  ><span class="barra"></span>
                     <label for="">DNI</label>
                 </div>
                 <div class="grupo">
@@ -36,7 +36,7 @@
                     <label for="">Fecha Nacimiento</label>
                 </div>
                 <div class="grupo">
-                    <input type="email" name="" id="email" ><span class="barra"></span>
+                    <input type="email" name="" placeholder="nombre@servidor.extension" id="email" ><span class="barra"></span>
                     <label for="">E-mail</label>
                 </div>
                 <div class="grupo">
